--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,9 @@
     "wix.vscode-import-cost",
     "pflannery.vscode-versionlens",
     "editorconfig.editorconfig",
-    "prisma.prisma"
+    "prisma.prisma",
+    "csstools.postcss",
+    "bradlc.vscode-tailwindcss"
   ],
   "unwantedRecommendations": []
 }
