--- a/web/package.json
+++ b/web/package.json
@@ -26,9 +26,11 @@
     "@tailwindcss/forms": "0.5.2",
     "@tailwindcss/line-clamp": "0.4.0",
     "@tailwindcss/typography": "0.5.2",
-    "autoprefixer": "10.4.7",
-    "postcss": "8.4.14",
-    "postcss-loader": "7.0.0",
-    "tailwindcss": "3.0.24"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "tailwindcss": "^3.2.3"
   }
 }
